<resources>
    <string name="app_name">CRUDE Motor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="isitext1">Do you don\'t have account ?</string>
    <string name="isitext2">Create account</string>
    <string name="namauser">Nama user</string>
    <string name="alamat">Alamat</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="notelpone">No telpon</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="update">Update</string>
</resources>
