<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.editprofile.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="30dp"/>

            <TextView
                android:id="@+id/txt_change_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_user"
                android:gravity="center"
                android:text="Change photo"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_light"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp">

                <EditText
                    android:id="@+id/edt_nama_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextColor"
                    android:singleLine="true"
                    android:hint="@string/namauser"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edt_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextColor"
                    android:hint="@string/alamat"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edt_notelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextColor"
                    android:singleLine="true"
                    android:hint="@string/notelpone"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spin_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-3dp"
                android:hint="Gender"
                android:fontFamily="sans-serif-light"
                android:inputType="textPersonName" />

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>